# anime-academy

./: .gitignore  README.md  docker-compose.yml
backend/: .env-example  .gitignore  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 254bdcda32f4_email_nullable_true.py  276f84489cce_add_username.py  2a62800d2f4f_update_anime_review_to_rating.py  3694a1e4ddcc_add_comments.py  39625bc385d7_add_anime_series_table.py  4e1244b6f2a1_add_nullable.py  62bff296cf1a_change_naming.py  6c481ca23cf4_add_description_to_user.py  804778c46fa8_add_base_models.py  92aaae9f98b0_initial.py  a89c038a4597_add_annotation.py  c4ae695f0ae8_add_has_reply.py  ca3e0392edf4_init.py  d49995fae930_init.py  e36dfc1dfb6c_change_description_to_text.py  e703f159a1a3_add_status_for_anime.py  f0e6a64cee7f_fix_time.py  f6bc915b068a_add_m2m_connection.py
backend/src/: container.py
backend/src/admin/models/: anime_admin.py  anime_comment_admin.py  anime_rating_admin.py  anime_series_admin.py  genre_admin.py  user_admin.py  user_anime_status_admin.py
backend/src/clients/: redis_cache.py
backend/src/clients/database/: engine.py  utils.py
backend/src/server/: app.py  handle_erros.py
backend/src/server/middlewares/: cache.py
backend/src/services/: errors.py  static.py
backend/src/services/anime/: interface.py  schemas.py  service.py
backend/src/services/anime_comment/: interface.py  schemas.py  service.py
backend/src/services/anime_genre/: schemas.py
backend/src/settings/: database.py  email.py  redis.py  test_database.py  user_settins.py
(+190 files in other folders)
