[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "d.drik",email = "27danik98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi-users[oauth,sqlalchemy] (>=14.0.1,<15.0.0)",
    "fastcrud (>=0.15.7,<0.16.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
